# InFlow-Agent-Builder

./: DEMO_SCRIPT.md  ENV_SETUP.md  NEW_TOOL_IDEAS.md  ONECHAIN_MIGRATION_IDEAS.md  README.md  WORKFLOW_DIAGRAM.md  deploy-contracts.sh  doc.md  new-ideas.txt  start-all.sh  stop-all.sh  supabase_migration.sql
AI_workflow_backend/: .env.example  docker-compose.yml  main.py  requirements.txt
backend/: .env.example  CONVERSATION_API.md  SETUP_GUIDE.md  SMART_TOOL_CALLING_QUICKSTART.md  app.js  health-check.sh  main.js  package-lock.json  package.json  test.js  test_smart_routing.js
backend/config/: abis.js  constants.js  supabase.js
backend/controllers/: allowanceController.js  contractChatController.js  conversationController.js  emailController.js  nftController.js  nlExecutorController.js  priceController.js  tokenController.js  transferController.js  walletController.js  webhookController.js
backend/database/: schema.sql
backend/routes/: allowanceRoutes.js  contractChatRoutes.js  conversationRoutes.js  emailRoutes.js  healthRoutes.js  nftRoutes.js  nlExecutorRoutes.js  priceRoutes.js  tokenRoutes.js  transferRoutes.js  walletRoutes.js
contract/token_factory/: Cargo.toml  test_factory_v2.sh  token_abi.json
contract/token_factory/src/: lib.rs
frontend/: DATABASE_SCHEMA.sql  DATABASE_SETUP_GUIDE.md  README.md  SUPABASE_SETUP.sql  X402_PAYMENT_SCHEMA.sql  color-pallete.md  package-lock.json  package.json
n8n_agent_backend/: .env.example  ENV_SETUP.md  docker-compose.yml  main.py  requests.md
orbit_ai_backend/: .env.example  README.md  main.py
(+66 files in other folders)
